# SiagOffice

./: AUTHORS  ChangeLog  FILES  INSTALL  Makefile.am  NEWS  NLS  README.md  TODO  acinclude.m4  config.h.in  configure.in
common/: Makefile.am  any2xpm  common.c  common.h  common.scm  dictionary.cs  dictionary.da  dictionary.de  dictionary.es  dictionary.fr  dictionary.gl  dictionary.hr  dictionary.hu  dictionary.it  dictionary.nl  dictionary.no  dictionary.pl  dictionary.pt_BR  dictionary.ru  dictionary.sv  kdeinst  newdict  o3read.c  o3read.h  plugin.h  position.scm  ps.c  rgb.c  siag.dfmext  siag.magic  siagrun  tools.scm
common/bitmaps/: Makefile.am  README  SO3.xpm  addressbook.xpm  back.xpm  blank.xpm  bold.xpm  book-closed.xpm  book-open.xpm  borders.xpm  cancel.xpm  center.xpm  composer.xpm  compress.xpm  copy.xpm  copyright.xpm  cut.xpm  data.xpm  editor.xpm  egon.xpm  fld_closed.xpm  fld_new.xpm  fld_open.xpm  fld_up.xpm  fonts.xpm  fromnone  grid.xpm  gvu.xpm  handlebg.xpm  hcenter.xpm  hfull.xpm  hleft.xpm  home.xpm  hright.xpm  icons.xpm  image.xpm  info.xpm  insert.xpm  italic.xpm  landscape.xpm  (+49 more)
common/docs/: Copyright  Makefile.am  credits.html  fonts.html  form.html  interpreters.html  office.html  plugins.html  search.html  siaghelp  siaghelp.html
common/themes/: Makefile.am  README  theme.athena  theme.classic  theme.gnome  theme.kde  theme.kde2  theme.ms
egon/: Makefile.am  animator.scm  buffer.c  cmds.c  egon.h  egon.scm  fileio.c  fileio_c.c  fileio_egon.c  fileio_html.c  fileio_mgp.c  fileio_ppt.c  fileio_scm.c  fileio_txt.c  guilei.c  main.c  matrix.c  menu.scm  mgptotxt  pythoni.c  railway.c  rubyi.c  siodi.c  tcli.c  user_interface.h
egon/docs/: Makefile.am  commands.html  concepts.html  egon.1  egon.html  fileformats.html  intro.html  invocation.html  keys.html  mouse.html  scheme.html  scrollbars.html  strings.html  toolbar.html
egon/examples/: Makefile.am  bounce.egon  ms.egon  propeller.egon  rondo.egon
gvu/: Gvu.ad  Gvu.kdelnk  Makefile.am  README  callbacks.c  copyright.html  dot.xpm  gs.interface  gv.h  gvu-ad.h  gvu.1  gvu.html  main.c  misc.c
plugins/: Form.ad  Makefile.am  README  clipart.c  dummy.c  dummy.scm  dummy_plugin.1  form-ad.h  form.c  hello.c  image.c  plot.c  plugin.scm  siodi.c  text.c
pw/: Makefile.am  buffer.c  cmds.c  external.load  fileio.c  fileio_html.c  fileio_pw.c  fileio_rtf.c  fileio_sxw.c  fileio_txt.c  guilei.c  main.c  matrix.c  menu.scm  position.c  pw.h  pw.scm  pythoni.c  railway.c  rubyi.c  siodi.c  styles.scm  tcli.c  user_interface.h
pw/docs/: Makefile.am  commands.html  concepts.html  fileformats.html  intro.html  invocation.html  keys.html  mouse.html  pw.1  pw.html  scheme.html  scrollbars.html  spell.html  strings.html  toolbar.html
pw/examples/: Makefile.am  changes.pw  chead.doc  chead.html  chead.pw  chead.rtf  chead.txt  color.pw  egon.pw  egon.rtf  morefonts.pw  newpw.pw  rtfex.rtf  rtftest.rtf  rtftest2.rtf  rtftest3.rtf  standard.bmk  styles.html  styles.pw  styles2.pw  svenska.pw  svenska.rtf
siag/: 123.scm  Makefile.am  buffer.c  calc.h  ccmath.c  ccmath.scm  ci.c  cmds.c  data.scm  db.c  external.load  external.save  fileio.c  fileio.h  fileio_abs.c  fileio_html.c  fileio_latex.c  fileio_ps.c  fileio_scm.c  fileio_siag.c  fileio_sxc.c  fileio_tbl.c  fileio_txt.c  fileio_wk1.c  fileio_xls.c  filemgr.scm  find.scm  functions.scm  globals.c  gmp.c  guilei.c  keytable.scm  mailto.scm  main.c  mathfunc.c  mathfunc.h  mathwrap.c  matrix.c  menu.scm  plot.scm  (+19 more)
siag/docs/: Makefile.am  README  c-expr.html  commands.html  concepts.html  excel.html  fileformats.html  form.html  gnuplot.html  intro.html  invocation.html  keys.html  mouse.html  scheme.html  scrollbars.html  siag-functions.html  siag.1  siag.html  strings.html  toolbar.html
siag/examples/: Makefile.am  allfuncs.wk1  allfunctions.siag  cheeses.siag  complex.siag  database.siag  emprestimo.wk1  example.wk1  fibonacci-c.siag  fibonacci.siag  fonts.siag  foo.siag  foo.wk1  formtest.siag  gmp.siag  group.siag  heaven-c.siag  heaven-guile.siag  heaven-tcl.siag  heaven.siag  hyperhelp.siag  image_plugin.siag  kalkyl.siag  mailaddr.csv  morefonts.siag  multtabl-c.siag  multtabl.siag  obras.wk1  passwd.siag  plot.siag  portfolj.siag  prestacao.wk1  property.siag  sincos.siag  strfib.siag  strings.siag  surface1.siag  surface2.siag  tables.wk1  tcltest.siag
siod/: Makefile.am  md5.h  ndbm.c  regex.c  silence.i  siod.h  siod.scm  siodp.h  slib.c  sliba.c  slibu.c  ss.c  ss.h  tar.c  trace.c
siod/docs/: Makefile.am  siod.html
tsiag/: Makefile.am  MwUtils.c  MwUtils.h  fonts.c  tsiag.c  tsiag.h  window.c
xcommon/: Ghostview.c  Ghostview.h  GhostviewP.h  Makefile.am  StringDefs.scm  dialogs-ad.h  embed.c  embed.h  filesel-ad.h  form.scm  forminput.c  nws-ad.h  plugin.c  plugin.h  xcommon-ad.h  xcommon.c  xcommon.h
xed/: Makefile.am  README  Xed.ad  Xedplus.kdelnk  app-defaults.h  commands.c  dnd.c  edit.c  file.c  file_sel.c  jump.c  search.c  special.c  warning.c  xedit.c  xedit.h  xedplus.1  xedplus.html
xegon/: Egon.ad  Egon.kdelnk  Makefile.am  app-defaults.h  fileio_gif.c  fileio_ps.c  selection.c  window.c  x-egon.kdelnk  xegon.c  xegon.h
xfiler/: Bitmaps.c  Chmod.c  Comms.c  Comms.h  Confirm.c  Delete.c  Dirs.c  Dnd.c  Errors.c  Exec.c  Files.h  FilesMagic  Filesrc  Fw.c  FwActions.c  FwCb.c  Info.c  Main.c  Makefile.am  Ops.c  Popup.c  Runcmd.ad  Utils.c  Xfiler.ad  Xfiler.kdelnk  blank.xpm  exec.c  magic.c  magic.h  makeicons  regexp.c  regexp.h  regsub.c  runcmd-ad.h  runcmd.1  runcmd.c  tycoon.c  xfiler-ad.h  xfiler.1  xfiler.html  (+1 more)
xfiler/bitmaps/: Makefile.am  xfm_blackhole.xbm  xfm_cline.xbm  xfm_dir.xbm  xfm_dirlnk.xbm  xfm_dirmsk.xbm  xfm_excl.xbm  xfm_exec.xbm  xfm_execlnk.xbm  xfm_execmsk.xbm  xfm_file.xbm  xfm_filemsk.xbm  xfm_files.xbm  xfm_filesmsk.xbm  xfm_fline.xbm  xfm_larrow.xbm  xfm_lline.xbm  (+10 more)
xpw/: Makefile.am  PW.kdelnk  Pw.ad  app-defaults.h  fileio_ps.c  window.c  x-pw.kdelnk  xpw.c  xpw.h
xsiag/: Makefile.am  Siag.ad  Siag.kdelnk  app-defaults.h  window.c  x-siag.kdelnk  xsiag.c  xsiag.h
(+152 files in other folders)
