
pwexamplesdir = $(docdir)/pw/examples

pwexamples_DATA = changes.pw chead.doc chead.html chead.pw chead.rtf chead.txt \
	color.pw egon.pw egon.rtf morefonts.pw newpw.pw rtfex.rtf \
	rtftest.rtf rtftest2.rtf rtftest3.rtf standard.bmk \
	styles.html styles.pw styles2.pw svenska.pw svenska.rtf

EXTRA_DIST = $(pwexamples_DATA)

