
siagexamplesdir = $(docdir)/siag/examples

siagexamples_DATA = allfunctions.siag allfuncs.wk1 cheeses.siag complex.siag \
	database.siag \
	emprestimo.wk1 example.wk1 fibonacci-c.siag fibonacci.siag \
	fonts.siag foo.siag foo.wk1 formtest.siag gmp.siag group.siag \
	heaven-c.siag heaven-guile.siag heaven-tcl.siag heaven.siag \
	hyperhelp.siag image_plugin.siag kalkyl.siag mailaddr.csv \
	morefonts.siag multtabl-c.siag multtabl.siag obras.wk1 \
	passwd.siag plot.siag portfolj.siag \
	prestacao.wk1 property.siag sincos.siag \
	strfib.siag strings.siag surface1.siag surface2.siag \
	tables.wk1 tcltest.siag

EXTRA_DIST = $(siagexamples_DATA)

