EXTRA_DIST = xfm_blackhole.xbm xfm_cline.xbm xfm_dir.xbm xfm_dirlnk.xbm \
	xfm_dirmsk.xbm xfm_excl.xbm xfm_exec.xbm xfm_execlnk.xbm \
	xfm_execmsk.xbm xfm_file.xbm xfm_filemsk.xbm xfm_files.xbm \
	xfm_filesmsk.xbm xfm_fline.xbm xfm_icon.xbm xfm_larrow.xbm \
	xfm_lline.xbm xfm_noentry.xbm xfm_noentrymsk.xbm \
	xfm_notick.xbm xfm_rarrow.xbm xfm_symlnk.xbm xfm_tick.xbm \
	xfm_tline.xbm xfm_watch.xbm xfm_watchmsk.xbm xfm_wavy_arrow.xbm
