
xpm_DATA = back.xpm bold.xpm cancel.xpm copy.xpm cut.xpm \
	fld_open.xpm save.xpm forward.xpm hcenter.xpm hleft.xpm \
	home.xpm hfull.xpm hright.xpm info.xpm saveas.xpm \
	italic.xpm new.xpm next.xpm paste.xpm play.xpm \
	previous.xpm preview.xpm printer.xpm quit.xpm redo.xpm reload.xpm \
	search.xpm spell.xpm stop.xpm uchar.xpm undo.xpm handlebg.xpm

xpmdir = $(datadir)/siag/common/bitmaps/gnome

EXTRA_DIST = $(xpm_DATA)

