
xpm_DATA = back.xpm cancel.xpm copy.xpm cut.xpm fld_open.xpm \
	save.xpm forward.xpm home.xpm info.xpm larger.xpm \
	new.xpm next.xpm paste.xpm play.xpm preview.xpm \
	previous.xpm printer.xpm quit.xpm reload.xpm saveas.xpm \
	search.xpm smaller.xpm stop.xpm handlebg.xpm

xpmdir = $(datadir)/siag/common/bitmaps/kde

EXTRA_DIST = $(xpm_DATA)

