
xpm_DATA = back.xpm bold.xpm borders.xpm cancel.xpm copy.xpm cut.xpm \
	editor.xpm fld_new.xpm fld_open.xpm fld_up.xpm forward.xpm \
	grid.xpm handlebg.xpm hcenter.xpm \
	hfull.xpm hleft.xpm home.xpm hright.xpm info.xpm italic.xpm \
	larger.xpm lline.xpm new.xpm none.xpm paste.xpm preview.xpm \
	printer.xpm quit.xpm redo.xpm reload.xpm rline.xpm save.xpm saveas.xpm \
	security.xpm sigma.xpm smaller.xpm spell.xpm stop.xpm \
	uchar.xpm uline.xpm undo.xpm

xpmdir = $(datadir)/siag/common/bitmaps/kde2

EXTRA_DIST = $(xpm_DATA)
