
xpm_DATA = bold.xpm copy.xpm cut.xpm fld_open.xpm hcenter.xpm \
	handlebg.xpm hfull.xpm hleft.xpm hright.xpm italic.xpm \
	new.xpm paste.xpm plotter.xpm printer.xpm redo.xpm saveas.xpm \
	save.xpm sigma.xpm sortaz.xpm sortza.xpm undo.xpm

xpmdir = $(datadir)/siag/common/bitmaps/ms

EXTRA_DIST = $(xpm_DATA)

